workloads/deployment.hello-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go
  namespace: hello
  labels:
    app: hello-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-go
  template:
    metadata:
      labels:
        app: hello-go
    spec:
      containers:
      - name: hello-go
        image: docker.pkg.github.com/jmgrimes/hello-go/hello-go:v2020.39.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /hello-world
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        ports:
        - name: service-http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /hello-world
            port: 8080
        resources:
          requests:
            memory: 128Mi
            cpu: 250m
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
        - name: appconf
          mountPath: /app/conf
      imagePullSecrets:
        - name: registry-credentials
      volumes:
      - name: appconf
        configMap:
          name: hello-go
