workloads/service.hello-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  namespace: hello
spec:
  selector:
    app: hello-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
