workloads/ingress.hello-java.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-java
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello-java
        pathType: Prefix
        backend:
          service:
            name: hello-java
            port:
              number: 80
